add examples of Java 11+ module exceptions